--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -38,6 +38,9 @@ a .icon-loading,
   right: 7px;
   top: 9px;
 }
+.form-horizontal .input-with-icon {
+  display: block;
+}
 
 /* Global Bootstrap overrides and addons */
 
@@ -575,9 +578,9 @@ body {
   border-bottom: 0;
   padding-bottom: 0;
 }
-.tx-send .row,
-.tx-send .tx-output-add {
-  padding-bottom: 1.25em;
+.tx-output .row,
+.tx-output-add {
+  padding-bottom: 1em;
 }
 .tx-output-add {
   border-top: 1px solid #d9d9d9;
@@ -596,24 +599,31 @@ body {
 .tx-output .btn-sm {
   margin-right: -13px;
 }
-.tx-output .form-group {
-  display: table;
-  width: 100%;
+.tx-output hr {
+  margin-top: 0;
+  margin-bottom: 2em;
 }
-.tx-output-label {
-  display: table-cell;
-  width: 6.5em;
+.tx-amount input,
+.tx-amount select {
+  float: left;
+  width: 6em;
 }
-.tx-output-controls {
-  display: table;
-  width: 100%;
+.tx-amount select {
+  width: 5.5em;
+  border-left: 0;
 }
-.tx-output .tx-output-controls input {
-  width: 100%;
+.tx-amount .form-control-static {
+  float: left;
+  width: 1em;
+  font-size: 150%;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  line-height: 1.5;
 }
-.tx-output-help .help-block {
-  display: block;
-  margin-left: 6.5em;
+.tx-amount .help-block {
+  clear: both;
+  padding-top: 0.5em;
 }
 
 .tx-submit {
