PIN: Replaced question marks with black dots.

--- a/app/views/modal/pin.html
+++ b/app/views/modal/pin.html
@@ -26,43 +26,43 @@
       <div class="form-group">
         <span class="col-sm-4">
           <button type="button" class="btn btn-block btn-lg"
-                  ng-click="addPin(7)">?</button>
+                  ng-click="addPin(7)">&#9679;</button>
         </span>
         <span class="col-sm-4">
           <button type="button" class="btn btn-block btn-lg"
-                  ng-click="addPin(8)">?</button>
+                  ng-click="addPin(8)">&#9679;</button>
         </span>
         <span class="col-sm-4">
           <button type="button" class="btn btn-block btn-lg"
-                  ng-click="addPin(9)">?</button>
-        </span>
-      </div>
-      <div class="form-group">
-        <span class="col-sm-4">
-          <button type="button" class="btn btn-block btn-lg"
-                  ng-click="addPin(4)">?</button>
-        </span>
-        <span class="col-sm-4">
-          <button type="button" class="btn btn-block btn-lg"
-                  ng-click="addPin(5)">?</button>
-        </span>
-        <span class="col-sm-4">
-          <button type="button" class="btn btn-block btn-lg"
-                  ng-click="addPin(6)">?</button>
+                  ng-click="addPin(9)">&#9679;</button>
         </span>
       </div>
       <div class="form-group">
         <span class="col-sm-4">
           <button type="button" class="btn btn-block btn-lg"
-                  ng-click="addPin(1)">?</button>
+                  ng-click="addPin(4)">&#9679;</button>
         </span>
         <span class="col-sm-4">
           <button type="button" class="btn btn-block btn-lg"
-                  ng-click="addPin(2)">?</button>
+                  ng-click="addPin(5)">&#9679;</button>
         </span>
         <span class="col-sm-4">
           <button type="button" class="btn btn-block btn-lg"
-                  ng-click="addPin(3)">?</button>
+                  ng-click="addPin(6)">&#9679;</button>
+        </span>
+      </div>
+      <div class="form-group">
+        <span class="col-sm-4">
+          <button type="button" class="btn btn-block btn-lg"
+                  ng-click="addPin(1)">&#9679;</button>
+        </span>
+        <span class="col-sm-4">
+          <button type="button" class="btn btn-block btn-lg"
+                  ng-click="addPin(2)">&#9679;</button>
+        </span>
+        <span class="col-sm-4">
+          <button type="button" class="btn btn-block btn-lg"
+                  ng-click="addPin(3)">&#9679;</button>
         </span>
       </div>
     </div>
