--- a/app/views/modal/passphrase.html
+++ b/app/views/modal/passphrase.html
@@ -29,6 +29,7 @@
                ng-model="values.passphraseCheck"
                ng-hide="showPassphrase">
       </div>
+      <span class="help-block">Note that passphrase is case-sensitive.</span>
     </div>
     <div class="form-group">
       <div class="checkbox">
