--- a/app/views/account/send.html
+++ b/app/views/account/send.html
@@ -1,13 +1,6 @@
 <div ng-controller="DeviceCtrl">
   <div ng-controller="AccountCtrl">
 
-    <ol class="breadcrumb">
-      <li><a ng-href="#/device/{{device.id}}">{{device.label()}}</a></li>
-      <li><a ng-href="#/device/{{device.id}}/account/{{account.id}}"
-        >{{account.label()}}</a></li>
-      <li class="active">Send</li>
-      <ng-include src="'views/device/forget.link.html'"></ng-include>
-    </ol>
     <div class="alert alert-danger alert-inconsistent"
          ng-show="account.isInconsistent()">
       <strong>Warning!</strong> Account balance information is inconsistent.
@@ -17,124 +10,168 @@
 
     <div ng-controller="AccountSendCtrl">
       <form name="form" class="form-horizontal"
-          ng-submit="send()"
-          ng-disabled="device.status() !== 'connected'">
+            ng-submit="send()"
+            ng-disabled="device.status() !== 'connected'">
         <div class="tab-content tx-send">
-          <fieldset ng-disabled="!device.isConnected()"
-              class="overlay-container">
+          <fieldset class="overlay-container">
+
+            <!-- Transaction outputs -->
             <div class="tx-output"
-                ng-repeat="output in tx.values.outputs">
-              <div class="row">
-                <div class="col-sm-10"
-                  ng-class="{ 'has-error': output.error.address }">
-                  <div class="form-group">
-                    <label for="address" class="control-label col-sm-2">Address</label>
-                    <div class="col-sm-10">
-                      <span class="input-with-icon">
-                        <input id="address" class="form-control" type="text"
-                            ng-model="output.address"
-                            typeahead="
-                            address.address as address.label
-                            for address in suggestAddresses() | filter:$viewValue"
-                            required>
-                        <a href=""
-                           class="glyphicon glyphicon-qrcode input-icon text-muted"
-                           tooltip="Scan QR code"
-                           tooltip-append-to-body="true"
-                           ng-click="scanQr($index)"
-                           ng-show="!output.address && !qr.scanning && qr.enabled"></a>
-                      </span>
-                      <span class="help-block">
-                        {{output.error.address}}
-                      </span>
-                    </div>
-                  </div>
+                 ng-repeat="output in tx.values.outputs">
+
+              <!-- Address field -->
+              <div class="form-group"
+                   ng-class="{ 'has-error': output.error.address }">
+                <label for="address" class="control-label col-sm-2">Address</label>
+                <div class="col-sm-9">
+                  <span class="input-with-icon">
+                    <!-- Address input -->
+                    <input id="address" class="form-control" type="text"
+                           ng-model="output.address"
+                           typeahead="
+                           address.address as address.label
+                           for address in suggestAddresses() | filter:$viewValue"
+                           required>
+                    <!-- QR scan button -->
+                    <a href=""
+                       class="glyphicon glyphicon-qrcode input-icon text-muted"
+                       tooltip="Scan QR code"
+                       tooltip-append-to-body="true"
+                       ng-click="scanQr($index)"
+                       ng-show="!output.address && !qr.scanning && qr.enabled"></a>
+                  </span>
+                  <span class="help-block">
+                    {{output.error.address}}
+                  </span>
                 </div>
-                <div class="col-sm-2"
-                  ng-show="tx.values.outputs.length > 1">
-                  <button type="button" class="btn btn-sm btn-link pull-right"
-                      ng-click="removeOutput($index)"
-                      ng-disabled="qr.scanning"
-                      tooltip="Remove recipient">
-                    <span class="glyphicon glyphicon-remove"></span>
-                    <span class="sr-only">Remove</span>
+                <!-- Remove output button -->
+                <div class="col-sm-1">
+                  <button type="button" class="btn btn-link pull-right"
+                          ng-show="tx.values.outputs.length > 1"
+                          ng-click="removeOutput($index)"
+                          ng-disabled="qr.scanning"
+                          tooltip="Remove recipient">
+                    <span class="text-muted">
+                      <span class="glyphicon glyphicon-remove"></span>
+                      <span class="sr-only">Remove</span>
+                    </span>
                   </button>
                 </div>
               </div>
-              <div class="row">
-                <div class="col-sm-10"
-                  ng-class="{'has-error': output.error.amount}">
-                  <div class="form-group">
-                    <label for="amount" class="control-label col-sm-2">Amount</label>
-                    <div class="col-sm-10 tx-amount">
-                      <input id="amount" class="form-control" type="text"
-                          ng-model="output.amount"
+
+              <!-- Amount fields -->
+              <div class="form-group"
+                   ng-class="{'has-error': output.error.amount}">
+                <label for="amount" class="control-label col-sm-2">Amount</label>
+                <div class="col-sm-10 tx-amount">
+                  <input id="amount" class="form-control" type="text"
+                         ng-model="output.amount"
+                         ng-change="convertToAltCurrency(output)"
+                         required>
+                  <select class="form-control"
+                          disabled>
+                    <option value="{{account.coin.coin_shortcut}}"
+                            selected>{{account.coin.coin_shortcut}}</option>
+                  </select>
+                  <p class="form-control-static">=</p>
+                  <input type="text" class="form-control"
+                         ng-model="output.amountAlt"
+                         ng-change="convertToBtc(output)">
+                  <select class="form-control"
+                          ng-model="output.currencyAlt"
                           ng-change="convertToAltCurrency(output)"
-                          required>
-                      <select class="form-control"
-                        disabled>
-                        <option value="{{account.coin.coin_shortcut}}"
-                          selected>{{account.coin.coin_shortcut}}</option>
-                      </select>
-                      <p class="form-control-static">=</p>
-                      <input type="text" class="form-control"
-                          ng-model="output.amountAlt"
-                          ng-change="convertToBtc(output)">
-                      <select class="form-control"
-                        ng-model="output.currencyAlt"
-                        ng-change="convertToAltCurrency(output)"
-                        ng-options="currency for currency in currenciesAlt">
-                      </select>
-                      <!-- <a href=""
-                      class="glyphicon glyphicon-upload input-icon text-muted"
-                      tooltip="Send all {{ account.coin.coin_shortcut }} from {{ account.label() }}"
-                      ng-click="output.amount = suggestAmount()"
-                      ng-show="!output.amount"></a> -->
-                      <span class="help-block" ng-if="output.error.amount">
-                        {{output.error.amount}}
-                      </span>
-                    </div>
-                  </div>
+                          ng-options="currency for currency in currenciesAlt">
+                  </select>
+                  <span class="help-block" ng-if="output.error.amount">
+                    {{output.error.amount}}
+                  </span>
                 </div>
               </div>
+
               <hr ng-hide="$last">
             </div>
 
-            <div class="tx-output-add">
-              <div class="row">
-                <div class="col-sm-6">
-                  <a href=""
-                    class="btn btn-link"
-                    ng-disabled="qr.scanning"
-                    ng-click="addOutput()">
-                    <span class="glyphicon glyphicon-plus"></span>
-                    Add recipient
-                  </a>
+            <!-- Button bar -->
+            <div class="tx-submit form-group">
+              <div class="col-sm-10 col-sm-push-2">
+                <span tooltip="Please connect your device to send coins."
+                      tooltip-trigger="{{
+                      device.status() !== 'connected' ? 'mouseenter' : 'manual'
+                      }}"
+                      tooltip-placement="bottom">
+                  <button type="submit"
+                          class="btn btn-primary btn-lg"
+                          ng-disabled="device.status() !== 'connected' || !tx.prepared">
+                    Send
+                  </button>
+
+                  <div class="tx-submit-additional pull-right btn-group">
+                    <button type="button" class="btn btn-default btn-sm"
+                            ng-click="addOutput()">
+                      <span class="glyphicon glyphicon-plus"></span> Add recipient
+                    </button>
+
+                    <button type="button" class="btn btn-default btn-sm dropdown-toggle"
+                            data-toggle="dropdown">
+                      <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                      <li>
+                        <a href="#" ng-click="importCsv">
+                          <span class="glyphicon glyphicon-import"></span> Import from CSV
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </span>
+
+                <div class="form-control-static text-danger"
+                     ng-show="tx.error">
+                  {{tx.error}}
                 </div>
-                <div class="col-sm-6 text-right">
-                  <a href="#/device/{{device.id}}/account/{{account.id}}"
-                      class="btn btn-link btn-sm"
-                      ng-click="cancelTxValues()">
-                    Cancel transaction
-                    <span class="glyphicon glyphicon-remove"></span>
-                  </a>
-                  <a href="javascript:void(0)"
-                      class="btn btn-link btn-sm"
-                      ng-click="removeAllOutputs()"
-                      ng-show="tx.values.outputs.length > 1">
-                    Remove all
-                    <span class="glyphicon glyphicon-remove"></span>
-                  </a>
-                  <a href="javascript:void(0)"
-                      class="btn btn-link btn-sm"
-                      ng-click="importCsv()">
-                    Import CSV
-                    <span class="glyphicon glyphicon-import"></span>
-                  </a>
+
+                <!-- Tx fee and preview of prepared tx -->
+                <div class="form-control-static tx-preview"
+                     ng-show="tx.prepared">
+                  <h6>
+                    <span tooltip="The transaction fee is calculated automatically."
+                          tooltip-placement="bottom"
+                          tooltip-append-to-body="true">
+                      Fee: {{tx.fee}} {{account.coin.coin_shortcut}}
+                    </span>
+                  </h6>
+
+                  <div class="text-muted">
+                    <h6>Inputs:</h6>
+                    <ol class="list-unstyled">
+                      <li ng-repeat="input in tx.prepared.inputs">
+                        {{
+                        input.prev_hash.substr(0, 31)
+                        }}&#8203;{{
+                        input.prev_hash.substr(31)
+                        }}:{{input.prev_index}}
+                      </li>
+                    </ol>
+
+                    <h6>Outputs:</h6>
+                    <ol class="list-unstyled">
+                      <li ng-repeat="output in tx.prepared.outputs">
+                        <strong>{{output.amount | amount}} {{account.coin.coin_shortcut}}</strong><br>
+                        <span ng-if="output.address">
+                          {{output.address}}
+                        </span>
+                        <span ng-if="output.address_n">
+                          {{output.address_n | bip32Path}} (the change address)
+                        </span>
+                      </li>
+                    </ol>
+                  </div>
+
                 </div>
               </div>
             </div>
 
+            <!-- Overlay with a send tx progress -->
             <div class="overlay overlay-default"
                  ng-if="sending">
               <div class="overlay-content text-center">
@@ -145,79 +182,10 @@
               </div>
             </div>
 
-            <debug>
-              <pre>{{ tx | json }}</pre>
-            </debug>
           </fieldset>
         </div>
-
-        <div class="tx-submit">
-          <span tooltip="Please connect your device to send coins."
-                tooltip-trigger="{{
-                  device.status() !== 'connected'
-                    ? 'mouseenter'
-                    : 'manual'
-                }}"
-                tooltip-placement="bottom">
-            <button type="submit"
-                    class="btn btn-primary"
-                    ng-disabled="device.status() !== 'connected' || !tx.prepared ">
-              Send
-              <span class="glyphicon glyphicon-chevron-right"></span>
-            </button>
-          </span>
-          <div class="form-control-static" ng-show="tx.prepared">
-            Fee: {{tx.fee}} {{account.coin.coin_shortcut}}
-          </div>
-          <div class="form-control-static text-danger" ng-show="tx.error">
-            {{tx.error}}
-          </div>
-        </div>
       </form>
-
-      <div class="line-divider">
-        <hr>
-        <div class="line-divider-content text-center">
-          <button class="btn btn-xs btn-default"
-              ng-disabled="!tx.prepared"
-              ng-click="advanced = !advanced">
-            Advanced details
-            <span class="glyphicon glyphicon-plus"></span>
-          </button>
-        </div>
-      </div>
-
-      <div class="well tx-preview"
-          ng-if="advanced">
-        <h4>Transaction Preview</h4>
-        <div ng-if="tx.prepared">
-          <h5>Fee</h5>
-          <span tooltip="The transaction fee is calculated automatically."
-                tooltip-placement="bottom"
-                tooltip-append-to-body="true">
-            {{tx.fee}} {{account.coin.coin_shortcut}}
-          </span>
-
-          <h5>Inputs</h5>
-          <ol class="list-unstyled">
-            <li ng-repeat="input in tx.prepared.inputs">
-              {{input.prev_hash.substr(0, 31)}}&#8203;{{input.prev_hash.substr(31)}}:{{input.prev_index}}
-            </li>
-          </ol>
-
-          <h5>Outputs</h5>
-          <ol class="list-unstyled">
-            <li ng-repeat="output in tx.prepared.outputs">
-              <strong>{{output.amount | amount}} {{account.coin.coin_shortcut}}</strong><br>
-              <span ng-if="output.address">{{output.address}}</span>
-              <span ng-if="output.address_n">{{output.address_n | bip32Path}}</span>
-            </li>
-          </ol>
-        </div>
-        <div ng-if="!tx.prepared">
-          Transaction is not prepared yet.
-        </div>
-      </div>
     </div>
+
   </div>
 </div>
