--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -29,6 +29,12 @@
       </small>
     </a>
 
+    <a href=""
+       class="dev-forget close"
+       tooltip="Forget this device"
+       tooltip-placement="bottom"
+       tooltip-append-to-body="true">&times;</a>
+
     <div class="dev-blocked tooltip tooltip-danger in right"
          ng-show="device.error">
       <div class="tooltip-inner"
