Remove breadcrumbs, move forget device to navigation

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -49,7 +49,6 @@ a .icon-loading,
 .btn,
 .alert,
 .container .jumbotron,
-.breadcrumb,
 .dropdown-menu,
 .modal-content,
 .nav-tabs > li > a,
@@ -103,10 +102,6 @@ a .icon-loading,
 
 .modal-body > .alert:last-child {
   margin-bottom: 0;
-}
-
-.breadcrumb li.pull-right:before {
-  display: none;
 }
 
 .text-capitals {
@@ -276,8 +271,18 @@ body {
 .nav-devices .active {
   background: rgba(66, 139, 202, 0.1);
 }
+
 .nav-devices .btn {
   margin-left: 3px;
+}
+
+.nav-devices > li > .dev-forget {
+  display: none;
+  margin-top: -22px;
+}
+
+.nav-devices > li:hover > .dev-forget {
+    display: block;
 }
 
 .dev-status {
