nav: Fix position of the Forget button

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -279,11 +279,13 @@ body {
 
 .nav-devices > li > .dev-forget {
   display: none;
-  margin-top: -22px;
+  padding: 2px 6px;
+  top: -30px;
+  left: -4px;
 }
 
 .nav-devices > li:hover > .dev-forget {
-    display: block;
+  display: block;
 }
 
 .dev-status {
