--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -280,8 +280,9 @@ body {
 .nav-devices > li > .dev-forget {
   display: none;
   padding: 2px 6px;
-  top: -30px;
-  left: -4px;
+  position: absolute;
+  top: 38px;
+  right: 6px;
 }
 
 .nav-devices > li:hover > .dev-forget {
