--- a/app/views/account/index.html
+++ b/app/views/account/index.html
@@ -1,6 +1,11 @@
 <div ng-controller="DeviceCtrl">
   <div ng-controller="AccountCtrl">
 
+    <ol class="breadcrumb">
+      <li><a ng-href="#/device/{{device.id}}">{{device.label()}}</a></li>
+      <li class="active">{{account.label()}}</li>
+      <ng-include src="'views/device/forget.link.html'"></ng-include>
+    </ol>
     <div class="alert alert-danger alert-inconsistent"
          ng-show="account.isInconsistent()">
       <strong>Warning!</strong> Account balance information is inconsistent.
