--- a/app/views/import.html
+++ b/app/views/import.html
@@ -1,5 +1,9 @@
 <div ng-controller="ImportCtrl">
 
+  <ol class="breadcrumb">
+    <li class="active">Import device</li>
+  </ol>
+
   <div class="row">
 
     <fieldset>
