Disconnect modal: Text updated to reflect that the setting is not remembered forever now.

--- a/app/views/modal/disconnect.html
+++ b/app/views/modal/disconnect.html
@@ -6,9 +6,8 @@
 <div class="modal-body">
   <p>Would you like Web Wallet to forget your device or to remember it, so that
   it is still visible even while disconnected?</p>
-  <p class="text-muted">Web Wallet will behave the way you chose now next time
-  you disconnect this or any other of your devices. It will not ask you this
-  question again.</p>
+  <p class="text-muted">If you choose to remember the device, we will not ask
+  you this question next time you disconnect the device.</p>
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-default" ng-click="$dismiss()">Remember</button>
