Remove breadcrumbs again.
This reverts commit 457670c171085b3a87f7e27b20fe4b7c3e1af61f.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -278,11 +278,14 @@ body {
 
 .nav-devices > li > .dev-forget {
   display: none;
-  margin-top: -22px;
+  padding: 2px 6px;
+  position: absolute;
+  top: 38px;
+  right: 6px;
 }
 
 .nav-devices > li:hover > .dev-forget {
-    display: block;
+  display: block;
 }
 
 .dev-status {
