--- a/app/views/account/sign.html
+++ b/app/views/account/sign.html
@@ -1,108 +1,110 @@
 <div ng-controller="DeviceCtrl">
-    <div ng-controller="AccountCtrl">
+  <div ng-controller="AccountCtrl">
 
-        <ng-include src="'views/account/nav.html'"></ng-include>
+    <ng-include src="'views/account/nav.html'"></ng-include>
 
-        <div class="tab-content"
-            ng-controller="AccountSignCtrl">
+    <div class="tab-content"
+         ng-controller="AccountSignCtrl">
 
-            <div class="row">
-                <div class="col-md-6">
-                    <form name="form"
-                        ng-submit="sign()">
-                        <fieldset>
-                            <legend>Sign message</legend>
+      <div class="row">
+        <div class="col-md-6">
+          <form name="form"
+                ng-submit="sign()">
+            <fieldset>
+              <legend>Sign message</legend>
 
-                            <div class="alert"
-                                ng-show="isAlertVisible('sign')"
-                                ng-class="getAlertClass('sign')">
-                                {{sign.res.message}}
-                            </div>
+              <div class="alert"
+                   ng-show="isAlertVisible('sign')"
+                   ng-class="getAlertClass('sign')">
+                {{sign.res.message}}
+              </div>
 
-                            <div class="form-group">
-                                <label for="sign-message">Message</label>
-                                <textarea class="form-control"
-                                    name="message" id="sign-message"
-                                    ng-model="sign.message"
-                                    ng-change="resetSign()"></textarea>
-                            </div>
+              <div class="form-group">
+                <label for="sign-message">Message</label>
+                <textarea class="form-control"
+                          name="message" id="sign-message"
+                          ng-model="sign.message"
+                          ng-change="resetSign()"></textarea>
+              </div>
 
-                            <div class="form-group">
-                                <label for="sign-address">Address</label>
-                                <input type="text" class="form-control"
-                                    name="address" id="sign-address"
-                                    ng-model="sign.address"
-                                    typeahead="address.address as address.label
-                                    for address in suggestAddresses() | filter:$viewValue"
-                                    ng-change="resetSign()"
-                                    ></textarea>
-                            </div>
+              <div class="form-group">
+                <label for="sign-address">Address</label>
+                <input type="text" class="form-control"
+                       name="address" id="sign-address"
+                       ng-model="sign.address"
+                       typeahead="
+                       address.address as address.label
+                       for address in suggestAddressesWithCache() | filter:$viewValue"
+                       ng-change="resetSign()"
+                       ></textarea>
+              </div>
 
-                            <div class="form-group">
-                                <label for="sign-signature">Signature</label>
-                                <textarea class="form-control"
-                                    name="signature" id="sign-signature"
-                                    rows="4" readonly="readonly"
-                                    ng-model="sign.signature"></textarea>
-                            </div>
+              <div class="form-group">
+                <label for="sign-signature">Signature</label>
+                <textarea class="form-control"
+                          name="signature" id="sign-signature"
+                          rows="4" readonly="readonly"
+                          ng-model="sign.signature"></textarea>
+              </div>
 
-                            <button type="submit" class="btn btn-primary">
-                                Sign
-                            </button>
-                        </fieldset>
-                    </form>
-                </div>
-
-                <div class="col-md-6">
-                    <form name="form"
-                        ng-submit="verify()">
-                        <fieldset>
-                            <legend>Verify message</legend>
-
-                            <div class="alert"
-                                ng-show="isAlertVisible('verify')"
-                                ng-class="getAlertClass('verify')">
-                                {{verify.res.message}}
-                            </div>
-
-                            <div class="form-group">
-                                <label for="verify-message">Message</label>
-                                <textarea class="form-control"
-                                    name="message" id="verify-message"
-                                    required
-                                    ng-model="verify.message"
-                                    ng-change="verify.res.status = null"
-                                    ></textarea>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="verify-address">Address</label>
-                                <input type="text" class="form-control"
-                                    name="address" id="verify-address"
-                                    ng-model="verify.address"
-                                    typeahead="address.address as address.label
-                                    for address in suggestAddresses() | filter:$viewValue"
-                                    ng-change="resetVerify()"
-                                    ></textarea>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="verify-signature">Signature</label>
-                                <textarea class="form-control"
-                                    name="signature" id="verify-signature"
-                                    rows="4"
-                                    ng-model="verify.signature"
-                                    ng-change="resetVerify()"
-                                    ></textarea>
-                            </div>
-
-                            <button type="submit" class="btn btn-primary">
-                                Verify
-                            </button>
-                        </fieldset>
-                    </form>
-                </div>
-            </div>
+              <button type="submit" class="btn btn-primary">
+                Sign
+              </button>
+            </fieldset>
+          </form>
         </div>
+
+        <div class="col-md-6">
+          <form name="form"
+                ng-submit="verify()">
+            <fieldset>
+              <legend>Verify message</legend>
+
+              <div class="alert"
+                   ng-show="isAlertVisible('verify')"
+                   ng-class="getAlertClass('verify')">
+                {{verify.res.message}}
+              </div>
+
+              <div class="form-group">
+                <label for="verify-message">Message</label>
+                <textarea class="form-control"
+                          name="message" id="verify-message"
+                          required
+                          ng-model="verify.message"
+                          ng-change="verify.res.status = null"
+                          ></textarea>
+              </div>
+
+              <div class="form-group">
+                <label for="verify-address">Address</label>
+                <input type="text" class="form-control"
+                       name="address" id="verify-address"
+                       ng-model="verify.address"
+                       typeahead="
+                       address.address as address.label
+                       for address in suggestAddressesWithCache() | filter:$viewValue"
+                       ng-change="resetVerify()"
+                       ></textarea>
+              </div>
+
+              <div class="form-group">
+                <label for="verify-signature">Signature</label>
+                <textarea class="form-control"
+                          name="signature" id="verify-signature"
+                          rows="4"
+                          ng-model="verify.signature"
+                          ng-change="resetVerify()"
+                          ></textarea>
+              </div>
+
+              <button type="submit" class="btn btn-primary">
+                Verify
+              </button>
+            </fieldset>
+          </form>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
