Log and XPUB: Show warning message that you should not give it away.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -308,8 +308,10 @@ body {
   margin-left: 10px;
 }
 
+/* Account Public Key (XPUB) */
+
 .nav-devices-accounts {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .nav-devices-accounts li:hover {
