--- a/app/views/debug.log.html
+++ b/app/views/debug.log.html
@@ -9,5 +9,6 @@
         </button>
         <h4>Log</h4>
         <textarea ng-click="debug.focus($event)">{{debug.logs}}</textarea>
+        <p>Warning: This log contains your XPUB. When you give it to a third party, you allow it to see your whole transaction history.</p>
     </div>
 </div>
