--- a/app/views/device/index.html
+++ b/app/views/device/index.html
@@ -40,7 +40,10 @@
         <hr>
         <div class="row">
           <div class="col-md-8">
-            <h5>Account public keys (XPUB)</h5>
+            <h4>Account public keys (XPUB)</h4>
+            <p>
+              <span class="text-danger">Be careful with your account XPUB.</span> When you give it to a third party, you allow it to see the whole transaction history of your account.
+            </p>
             <ul class="nav nav-devices-accounts text-break">
               <li ng-repeat="account in device.accounts"
                   ng-mouseenter="highlightXpub(account.publicKey())"
@@ -51,7 +54,10 @@
                 </small>
               </li>
             </ul>
-            <small class="text-muted"><strong>Hint:</strong> Hover over the account public key to show its QR code. Scan it into an application that supports XPUBs such as <a target="_blank" href="https://play.google.com/store/apps/details?id=com.satoshilabs.btcreceive">myTREZOR Lite</a> for Android. Afterwards you can watch your transactions and receive payments everywhere without carrying your TREZOR around!</small>
+            <p class="alert alert-info alert-withicon">
+              <span class="glyphicon glyphicon-info-sign alert-icon"></span>
+              <strong>Hint:</strong> Hover over the account public key to show its QR code. Scan it into an application that supports XPUBs such as <a target="_blank" href="https://play.google.com/store/apps/details?id=com.satoshilabs.btcreceive">myTREZOR Lite</a> for Android. Afterwards you can watch your transactions and receive payments everywhere without carrying your TREZOR around!
+            </p>
           </div>
           <div class="col-md-4">
             <div ng-if="highlightedXpub">
