--- a/app/views/error.html
+++ b/app/views/error.html
@@ -1,7 +1,8 @@
 <div class="row" ng-if="installed">
   <div class="col-md-6 col-md-offset-3">
-    <div class="alert alert-danger">
-      <h4>Plugin loading failed :(</h4> {{error.message}}
+    <div class="alert alert-danger clearfix">
+      <h4>Plugin loading failed :(</h4>
+      {{error.message}}
       <ng-include src="'views/debug.button.html'"></ng-include>
     </div>
     <ng-include src="'views/debug.log.html'"></ng-include>
