Send: CSV import fixed
Added missing import .

Fixed Angular onclick call.

--- a/app/views/account/send.html
+++ b/app/views/account/send.html
@@ -119,7 +119,7 @@
                     </button>
                     <ul class="dropdown-menu">
                       <li>
-                        <a href="#" ng-click="importCsv">
+                        <a href="" ng-click="importCsv()">
                           <span class="glyphicon glyphicon-import"></span> Import from CSV
                         </a>
                       </li>
