--- a/app/views/account/index.html
+++ b/app/views/account/index.html
@@ -82,7 +82,7 @@
       <div class="txlist-loading text-center text-muted"
            ng-show="account.transactions == null">
         <span class="icon-loading" title="Loading transactions..."></span>
-      <div>
+      </div>
     </div>
   </div>
 </div>
