Texts: Replaced all occurences of 'Web Wallet' with 'myTREZOR'.

--- a/app/views/modal/disconnect.html
+++ b/app/views/modal/disconnect.html
@@ -4,7 +4,7 @@
   <h4 class="modal-title">Forget device?</h4>
 </div>
 <div class="modal-body">
-  <p>Would you like Web Wallet to forget your device or to remember it, so that
+  <p>Would you like myTREZOR to forget your device or to remember it, so that
   it is still visible even while disconnected?</p>
   <p class="text-muted">If you choose to remember the device, we will not ask
   you this question next time you disconnect the device.</p>
