--- a/app/views/modal/forget.html
+++ b/app/views/modal/forget.html
@@ -5,7 +5,7 @@
   <h4 class="modal-title">Disconnect your Trezor now</h4>
 </div>
 <div class="modal-body">
-  The Web Wallet will forget your Trezor right after you disconnect it.
+  myTREZOR will forget your Trezor right after you disconnect it.
 </div>
 <div class="modal-footer"
      ng-if="!disableCancel">
