send: Link to CoinDesk price page instead of /api/

--- a/app/views/account/send.html
+++ b/app/views/account/send.html
@@ -83,8 +83,8 @@
                     </select>
                     <p class="form-control-static tx-amount-info">
                       Exchange rates provided by
-                      <a href="http://www.coindesk.com/api/"
-                        target="_blank">CoinDesk</a>.
+                      <a href="http://www.coindesk.com/price/"
+                         target="_blank">CoinDesk</a>.
                     </p>
                   </div>
                   <span class="help-block" ng-if="output.error.amount">
