Setup: Fixed a typo ('forget you passphrase')

--- a/app/views/device/index.setup.html
+++ b/app/views/device/index.setup.html
@@ -88,7 +88,7 @@
       <span class="glyphicon glyphicon-warning-sign alert-icon"></span>
       <h4>Passphrase encryption is for experts only. Proceed with caution!</h4>
       <p>Passphrase works like a 25th word of the seed which is not stored in
-      the Trezor. If you forget you passphrase, your wallet is lost for good. There is
+      the Trezor. If you forget your passphrase, your wallet is lost for good. There is
       absolutely no way to recover your funds.<br>
       <p>If you mistype your passphrase, a different wallet is created, which
       will look as if you had 0 BTC on your account.</p>
