nav: Fix tooltip for the Forget button

--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -35,6 +35,7 @@
        tooltip="Forget this device"
        tooltip-placement="bottom"
        tooltip-append-to-body="true"
+       tooltip-trigger="mouseenter"
        ng-click="forget(device)">&times;</a>
 
     <div class="dev-blocked tooltip tooltip-danger in right"
